@@ -3,17 +3,12 @@ PyFeyn TODO
 
  * Use the property() descriptor to bind foo.x to foo.get/setX() appropriately.
 
- * Make sure there are docstrings for all methods.
-
  * Write a manual.
 
  * Make/allow parallel arrows to curve like the curve at that point.
 
  * Transparently pass single options and lists of them using isinstance(foo,
    list).
-
- * Add a variety of standard vertex shapes: filled and unfilled circles, 
-   squares, pentagons, etc.
 
  * Add => type arrows for helicities.
 
@@ -27,7 +22,7 @@ PyFeyn TODO
  * Add a Gravitino line (a struck-through graviton)? Alternative is just a
    fermion.
 
- * Add multi-lines. Should be defined by number of lines and
+ * Improve multi-lines. Should be defined by number of lines and
    max-width/half-width OR number and separation. Arrows shouldn't necessarily
    be duplicated on all lines. Auto-sizing to blobs?  Should definitely crop to
    a visible path on the markers/blobs - should the visible path cropper be
